[package]
name = "badinfo-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
env_logger = "0.10"
log = "0.4"

actix-web = "4"
actix-files = "0"

r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

argon2 = "0.5.2"
rand = "0.8.5"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

markdown = "1.0.0-alpha.14"

